# YoriBot

./: .gitignore  README.md  bot.py  pyproject.toml
.github/workflows/: main.yml
basic_plugins/admin_manage/: __init__.py  clear_manage.py  group_manage.py  plugin_status_manage.py
basic_plugins/chat_history/: __init__.py
basic_plugins/database_records/: __init__.py  database.py
basic_plugins/event_handle/: group_event_handle.py
basic_plugins/hooks/: plugin_status_hook.py
basic_plugins/init_when_startup/: init_plugin_info.py
basic_plugins/nonebot_plugin_reboot/: __init__.py  command.py  config.py  reloader.py
basic_plugins/timing_tasks/: clear_plugin_info_cron.py  clear_temp.py  clear_temp_file_cron.py
configs/: path_config.py
plugins/: ping.py  today.py
plugins/_nonebot_plugin_petpet/: config.py  depends.py  download.py  functions.py  manager.py  utils.py
plugins/group_goodbye/: __init__.py
plugins/group_welcome/: __init__.py  data.py  path_config.py  utils.py
plugins/group_who_muted/: __init__.py  sentences.json
plugins/nonebot_plugins/: __init__.py
plugins/nonebot_plugins/nonebot-plugin-ncm/: pyproject.toml
plugins/nonebot_plugins/nonebot-plugin-ncm/_nonebot-plugin-ncm/: __init__.py  data_source.py
plugins/nonebot_plugins/nonebot-plugin-ncm/nonebot-plugin-ncm/: __init__.py  config.py  data_source.py
plugins/sign_in/: __init__.py  card.py  data.py  path_config.py
plugins/test/: __init__.py
plugins/wordbank_group_reply/: __init__.py  data.py  path_config.py  types.py  utils.py
utils/: global_logger.py  global_objects.py  group_manager.py  static_data_io.py  utils.py
utils/database_manager/: group_member_data.py
utils/image_utils/: image_builder.py  types.py
utils/plugin_manager/: __init__.py  plugin_info.py  plugin_status.py
